Update：新版本SDK中增加旧版本数据库数据迁移功能

--- a/IOS/example/BCLRingSDKDemo_New/BCLRingSDKDemo/BCLRingSDKDemo/Base.lproj/Main.storyboard
+++ b/IOS/example/BCLRingSDKDemo_New/BCLRingSDKDemo/BCLRingSDKDemo/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="0.0" y="103" width="393" height="595"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yok-QN-M64">
-                                        <rect key="frame" x="0.0" y="0.0" width="393" height="1431"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="1490"/>
                                         <subviews>
                                             <button opaque="NO" tag="100" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Noo-Ca-sE4" userLabel="0_Btn">
                                                 <rect key="frame" x="15" y="15" width="111" height="44"/>
@@ -931,6 +931,45 @@
                                                     <action selector="btnAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6v6-Fj-I89"/>
                                                 </connections>
                                             </button>
+                                            <button opaque="NO" tag="172" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="peu-FI-HfH" userLabel="72_Btn">
+                                                <rect key="frame" x="15" y="1431" width="111" height="44"/>
+                                                <color key="backgroundColor" red="0.81960785390000002" green="0.84705877299999999" blue="0.85882353779999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="44" id="s4i-ex-DJu"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" title="检查是否需要数据迁移"/>
+                                                <connections>
+                                                    <action selector="btnAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="g5e-4I-wbh"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" tag="173" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Aqh-8E-auB" userLabel="73_Btn">
+                                                <rect key="frame" x="141" y="1431" width="111" height="44"/>
+                                                <color key="backgroundColor" red="0.81960785390000002" green="0.84705877299999999" blue="0.85882353779999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="44" id="uV3-lW-eNC"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" title="查询迁移数据条数"/>
+                                                <connections>
+                                                    <action selector="btnAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7sv-y0-hNm"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" tag="174" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7O7-RY-cHx" userLabel="74_Btn">
+                                                <rect key="frame" x="267" y="1431" width="111" height="44"/>
+                                                <color key="backgroundColor" red="0.81960785390000002" green="0.84705877299999999" blue="0.85882353779999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="44" id="DJW-wU-why"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" title="开始迁移数据"/>
+                                                <connections>
+                                                    <action selector="btnAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Mqq-6m-cWa"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" red="0.93333333330000001" green="0.75686274509999996" blue="0.76078431369999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
@@ -962,6 +1001,7 @@
                                             <constraint firstItem="bGi-1L-Twq" firstAttribute="centerX" secondItem="Noo-Ca-sE4" secondAttribute="centerX" id="6KI-IH-DBH"/>
                                             <constraint firstItem="asR-RB-cd6" firstAttribute="leading" secondItem="Noo-Ca-sE4" secondAttribute="trailing" constant="15" id="6ar-Lt-GHf"/>
                                             <constraint firstItem="zaG-1R-adB" firstAttribute="top" secondItem="Gyc-tZ-GF4" secondAttribute="bottom" constant="15" id="6hi-Nn-Xel"/>
+                                            <constraint firstItem="peu-FI-HfH" firstAttribute="top" secondItem="TSv-t0-0bi" secondAttribute="bottom" constant="15" id="6v7-tc-Yhp"/>
                                             <constraint firstItem="KRi-Xy-7eu" firstAttribute="centerY" secondItem="jSx-Pq-6uA" secondAttribute="centerY" id="7Ms-ll-f4O"/>
                                             <constraint firstItem="YZB-JN-EUC" firstAttribute="centerY" secondItem="Gyc-tZ-GF4" secondAttribute="centerY" id="7Rt-Oa-JKc"/>
                                             <constraint firstItem="KuG-e0-Kb5" firstAttribute="centerY" secondItem="vaw-sR-HOZ" secondAttribute="centerY" id="80J-h1-YAd"/>
@@ -976,6 +1016,7 @@
                                             <constraint firstAttribute="trailing" secondItem="VwH-49-m8w" secondAttribute="trailing" constant="15" id="AfV-BB-ytS"/>
                                             <constraint firstItem="VDY-5e-HkD" firstAttribute="width" secondItem="asR-RB-cd6" secondAttribute="width" id="AhE-cq-F0F"/>
                                             <constraint firstItem="sf1-bV-Uqd" firstAttribute="centerX" secondItem="asR-RB-cd6" secondAttribute="centerX" id="AjS-Lm-5SQ"/>
+                                            <constraint firstItem="Aqh-8E-auB" firstAttribute="centerX" secondItem="asR-RB-cd6" secondAttribute="centerX" id="Aui-6t-Dk0"/>
                                             <constraint firstItem="Cmx-mp-c6c" firstAttribute="width" secondItem="asR-RB-cd6" secondAttribute="width" id="BB7-Gf-mNP"/>
                                             <constraint firstItem="tmi-p9-VCa" firstAttribute="width" secondItem="Noo-Ca-sE4" secondAttribute="width" id="BVm-uU-byk"/>
                                             <constraint firstItem="VDY-5e-HkD" firstAttribute="centerY" secondItem="byf-c7-okc" secondAttribute="centerY" id="BkB-Fu-w3H"/>
@@ -1002,6 +1043,7 @@
                                             <constraint firstItem="ZoP-Kp-DM3" firstAttribute="centerY" secondItem="egg-cp-66j" secondAttribute="centerY" id="H6s-4z-Pdq"/>
                                             <constraint firstItem="sMY-KW-Gfw" firstAttribute="centerY" secondItem="vHr-Xv-77A" secondAttribute="centerY" id="HBM-1w-oyj"/>
                                             <constraint firstItem="2Z4-nr-Y9t" firstAttribute="width" secondItem="VwH-49-m8w" secondAttribute="width" id="HTX-ne-utu"/>
+                                            <constraint firstItem="Aqh-8E-auB" firstAttribute="width" secondItem="asR-RB-cd6" secondAttribute="width" id="HmV-9K-MPM"/>
                                             <constraint firstItem="5ta-rW-gVH" firstAttribute="centerX" secondItem="Noo-Ca-sE4" secondAttribute="centerX" id="HqU-af-LZf"/>
                                             <constraint firstItem="jcc-oL-gSK" firstAttribute="width" secondItem="VwH-49-m8w" secondAttribute="width" id="I9e-TN-Dho"/>
                                             <constraint firstItem="oSr-lR-2zX" firstAttribute="centerX" secondItem="Noo-Ca-sE4" secondAttribute="centerX" id="Irz-ko-nvX"/>
@@ -1025,6 +1067,7 @@
                                             <constraint firstItem="d7Z-G5-72x" firstAttribute="width" secondItem="Noo-Ca-sE4" secondAttribute="width" id="NIj-aP-5pW"/>
                                             <constraint firstItem="cyW-Fm-CL4" firstAttribute="top" secondItem="oSr-lR-2zX" secondAttribute="bottom" constant="15" id="Nre-lt-4KH"/>
                                             <constraint firstItem="k5i-Gd-Erd" firstAttribute="centerX" secondItem="VwH-49-m8w" secondAttribute="centerX" id="OZX-Ie-TNJ"/>
+                                            <constraint firstItem="7O7-RY-cHx" firstAttribute="centerX" secondItem="VwH-49-m8w" secondAttribute="centerX" id="Opq-nU-eyD"/>
                                             <constraint firstItem="wt8-Vh-gC8" firstAttribute="centerY" secondItem="5Xr-5S-TL3" secondAttribute="centerY" id="Ovb-4M-kSZ"/>
                                             <constraint firstItem="1fc-zw-n0K" firstAttribute="top" secondItem="0O0-kD-6fX" secondAttribute="bottom" constant="15" id="P80-oi-SDk"/>
                                             <constraint firstItem="J6J-6B-mL2" firstAttribute="width" secondItem="VwH-49-m8w" secondAttribute="width" id="PJN-cc-8wS"/>
@@ -1067,6 +1110,7 @@
                                             <constraint firstItem="1fc-zw-n0K" firstAttribute="width" secondItem="Noo-Ca-sE4" secondAttribute="width" id="XDZ-PI-LUJ"/>
                                             <constraint firstItem="3yb-ne-9X7" firstAttribute="width" secondItem="VwH-49-m8w" secondAttribute="width" id="XWV-Bb-pxs"/>
                                             <constraint firstItem="IDs-09-wSQ" firstAttribute="width" secondItem="Noo-Ca-sE4" secondAttribute="width" id="Xex-mF-KS9"/>
+                                            <constraint firstItem="7O7-RY-cHx" firstAttribute="width" secondItem="VwH-49-m8w" secondAttribute="width" id="XsO-cN-ZAo"/>
                                             <constraint firstItem="tmi-p9-VCa" firstAttribute="centerY" secondItem="abb-rn-53a" secondAttribute="centerY" id="Xwz-gg-uEM"/>
                                             <constraint firstItem="fzp-C8-ej3" firstAttribute="width" secondItem="VwH-49-m8w" secondAttribute="width" id="Xy1-Xu-UWj"/>
                                             <constraint firstItem="KRi-Xy-7eu" firstAttribute="centerX" secondItem="VwH-49-m8w" secondAttribute="centerX" id="Yib-sb-aHN"/>
@@ -1092,7 +1136,6 @@
                                             <constraint firstItem="TSv-t0-0bi" firstAttribute="centerY" secondItem="b1O-B1-P9Y" secondAttribute="centerY" id="fS6-CQ-Ajw"/>
                                             <constraint firstItem="d7Z-G5-72x" firstAttribute="centerX" secondItem="Noo-Ca-sE4" secondAttribute="centerX" id="fVx-jq-YOz"/>
                                             <constraint firstItem="5Xr-5S-TL3" firstAttribute="width" secondItem="Noo-Ca-sE4" secondAttribute="width" id="fhN-Qi-Ore"/>
-                                            <constraint firstAttribute="bottom" secondItem="TSv-t0-0bi" secondAttribute="bottom" constant="15" id="g21-sT-D3s"/>
                                             <constraint firstItem="SkX-f9-LxJ" firstAttribute="centerY" secondItem="d7Z-G5-72x" secondAttribute="centerY" id="gFC-py-STR"/>
                                             <constraint firstItem="fzp-C8-ej3" firstAttribute="centerX" secondItem="VwH-49-m8w" secondAttribute="centerX" id="gXv-0n-Oww"/>
                                             <constraint firstItem="dHo-Ck-Sj5" firstAttribute="centerX" secondItem="asR-RB-cd6" secondAttribute="centerX" id="gak-Z6-Tgw"/>
@@ -1110,6 +1153,7 @@
                                             <constraint firstItem="Ihp-iF-qjp" firstAttribute="centerY" secondItem="Gyc-tZ-GF4" secondAttribute="centerY" id="l6u-bP-Jal"/>
                                             <constraint firstItem="xPZ-cX-7G6" firstAttribute="centerY" secondItem="5ta-rW-gVH" secondAttribute="centerY" id="m2B-BA-fOu"/>
                                             <constraint firstItem="aEb-E7-xeZ" firstAttribute="centerY" secondItem="0O0-kD-6fX" secondAttribute="centerY" id="mHS-3N-GZH"/>
+                                            <constraint firstItem="Aqh-8E-auB" firstAttribute="centerY" secondItem="peu-FI-HfH" secondAttribute="centerY" id="mMY-d0-qNl"/>
                                             <constraint firstItem="5Xr-5S-TL3" firstAttribute="centerX" secondItem="Noo-Ca-sE4" secondAttribute="centerX" id="mQf-hA-1Be"/>
                                             <constraint firstItem="ggT-2Q-fCw" firstAttribute="width" secondItem="VwH-49-m8w" secondAttribute="width" id="mZN-aM-SzO"/>
                                             <constraint firstItem="b1O-B1-P9Y" firstAttribute="width" secondItem="asR-RB-cd6" secondAttribute="width" id="nEO-L3-JDa"/>
@@ -1127,6 +1171,7 @@
                                             <constraint firstItem="wqN-wD-Tll" firstAttribute="centerY" secondItem="sf1-bV-Uqd" secondAttribute="centerY" id="qfU-SH-oz2"/>
                                             <constraint firstItem="oSr-lR-2zX" firstAttribute="width" secondItem="Noo-Ca-sE4" secondAttribute="width" id="qfp-6R-hiS"/>
                                             <constraint firstItem="vHr-Xv-77A" firstAttribute="top" secondItem="cyW-Fm-CL4" secondAttribute="bottom" constant="15" id="qo7-eP-OUq"/>
+                                            <constraint firstItem="peu-FI-HfH" firstAttribute="centerY" secondItem="7O7-RY-cHx" secondAttribute="centerY" id="r33-gz-rAg"/>
                                             <constraint firstItem="Qng-Ee-vFu" firstAttribute="width" secondItem="Noo-Ca-sE4" secondAttribute="width" id="rVJ-on-OU6"/>
                                             <constraint firstItem="vaw-sR-HOZ" firstAttribute="centerY" secondItem="dcB-H8-04l" secondAttribute="centerY" id="rip-dB-gZ7"/>
                                             <constraint firstItem="asR-RB-cd6" firstAttribute="width" secondItem="Noo-Ca-sE4" secondAttribute="width" id="rn4-cl-bYs"/>
@@ -1134,13 +1179,16 @@
                                             <constraint firstItem="ZoP-Kp-DM3" firstAttribute="centerX" secondItem="asR-RB-cd6" secondAttribute="centerX" id="sRw-g1-I5s"/>
                                             <constraint firstItem="IqO-vz-1W6" firstAttribute="centerX" secondItem="asR-RB-cd6" secondAttribute="centerX" id="sUl-re-TwK"/>
                                             <constraint firstItem="5Xr-5S-TL3" firstAttribute="top" secondItem="1fc-zw-n0K" secondAttribute="bottom" constant="15" id="sei-nR-OKD"/>
+                                            <constraint firstItem="peu-FI-HfH" firstAttribute="centerX" secondItem="Noo-Ca-sE4" secondAttribute="centerX" id="szM-fX-cWb"/>
                                             <constraint firstItem="aEb-E7-xeZ" firstAttribute="width" secondItem="asR-RB-cd6" secondAttribute="width" id="t70-BU-HZW"/>
                                             <constraint firstItem="mbQ-WA-Ul3" firstAttribute="centerX" secondItem="VwH-49-m8w" secondAttribute="centerX" id="tCh-Lb-V28"/>
                                             <constraint firstItem="9V5-r4-NMP" firstAttribute="width" secondItem="VwH-49-m8w" secondAttribute="width" id="tuu-Rs-pLZ"/>
                                             <constraint firstItem="xAE-hU-f6A" firstAttribute="centerX" secondItem="VwH-49-m8w" secondAttribute="centerX" id="uUn-ye-Etn"/>
                                             <constraint firstItem="G39-cp-RQ1" firstAttribute="centerX" secondItem="asR-RB-cd6" secondAttribute="centerX" id="ue7-kY-h96"/>
+                                            <constraint firstAttribute="bottom" secondItem="peu-FI-HfH" secondAttribute="bottom" constant="15" id="uq1-Xy-asK"/>
                                             <constraint firstItem="0O0-kD-6fX" firstAttribute="centerX" secondItem="Noo-Ca-sE4" secondAttribute="centerX" id="v2H-gM-4CS"/>
                                             <constraint firstItem="fxL-Jm-PKe" firstAttribute="centerX" secondItem="VwH-49-m8w" secondAttribute="centerX" id="vB2-7j-zGi"/>
+                                            <constraint firstItem="peu-FI-HfH" firstAttribute="width" secondItem="Noo-Ca-sE4" secondAttribute="width" id="vPg-Ai-5n2"/>
                                             <constraint firstItem="G39-cp-RQ1" firstAttribute="width" secondItem="asR-RB-cd6" secondAttribute="width" id="wLp-YH-FUO"/>
                                             <constraint firstItem="Noo-Ca-sE4" firstAttribute="width" secondItem="VwH-49-m8w" secondAttribute="width" id="wXr-Ek-bYn"/>
                                             <constraint firstItem="vaw-sR-HOZ" firstAttribute="width" secondItem="Noo-Ca-sE4" secondAttribute="width" id="wc1-kV-mKw"/>
